--- a/dashboard.yaml
+++ b/dashboard.yaml
@@ -168,7 +168,7 @@ spec:
           emptyDir: {}
       serviceAccountName: kubernetes-dashboard
       nodeSelector:
-        "kubernetes.io/os": linux
+        "kubernetes.io/hostname": m-k8s
       # Comment the following tolerations if Dashboard must not be deployed on master
       tolerations:
         - key: node-role.kubernetes.io/master
